# hexlet-flask-example

./: .gitignore  example.py  makefile  pyproject.toml  users.json
templates/courses/: index.html  layot.html  show.html
templates/users/: index.html  new.html
